[gd_scene load_steps=9 format=2]

[ext_resource path="res://artifacts/graphics/fields/forest.png" type="Texture" id=1]
[ext_resource path="res://artifacts/graphics/fields/castle_placeholder.png" type="Texture" id=2]
[ext_resource path="res://classes/game/model/fields/Field.gd" type="Script" id=3]
[ext_resource path="res://artifacts/graphics/fields/battle-axe.svg" type="Texture" id=4]
[ext_resource path="res://artifacts/fonts/notosans_settings_title.tres" type="DynamicFont" id=5]
[ext_resource path="res://artifacts/graphics/fields/blur.png" type="Texture" id=6]
[ext_resource path="res://artifacts/graphics/fields/footprint.svg" type="Texture" id=7]
[ext_resource path="res://artifacts/graphics/fields/checked-shield.svg" type="Texture" id=8]

[node name="Field" type="TextureButton" groups=[
"fields",
]]
margin_right = 80.0
margin_bottom = 91.0
rect_min_size = Vector2( 80, 91 )
rect_pivot_offset = Vector2( 40.5101, 42.6054 )
disabled = true
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 10

[node name="Blur" type="TextureRect" parent="Node2D"]
visible = false
margin_right = 80.0
margin_bottom = 91.0
rect_min_size = Vector2( 80, 91 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 80.0
margin_bottom = 91.0
rect_min_size = Vector2( 80, 91 )
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 6
custom_constants/margin_left = 8
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/MarginContainer"]
margin_left = 8.0
margin_top = 6.0
margin_right = 72.0
margin_bottom = 79.0
alignment = 1

[node name="Distance" type="HBoxContainer" parent="Node2D/MarginContainer/VBoxContainer"]
visible = false
margin_top = 27.0
margin_right = 64.0
margin_bottom = 45.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Node2D/MarginContainer/VBoxContainer/Distance"]
margin_left = 12.0
margin_right = 29.0
margin_bottom = 18.0
rect_min_size = Vector2( 17, 17 )
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Node2D/MarginContainer/VBoxContainer/Distance"]
margin_left = 33.0
margin_right = 51.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
text = "12"
valign = 1

[node name="Att_Dmg" type="HBoxContainer" parent="Node2D/MarginContainer/VBoxContainer"]
visible = false
margin_top = 38.0
margin_right = 64.0
margin_bottom = 56.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Node2D/MarginContainer/VBoxContainer/Att_Dmg"]
margin_left = 12.0
margin_right = 29.0
margin_bottom = 18.0
rect_min_size = Vector2( 17, 17 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Node2D/MarginContainer/VBoxContainer/Att_Dmg"]
margin_left = 33.0
margin_right = 51.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
text = "12"
valign = 1

[node name="Def_Dmg" type="HBoxContainer" parent="Node2D/MarginContainer/VBoxContainer"]
visible = false
margin_top = 49.0
margin_right = 64.0
margin_bottom = 67.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Node2D/MarginContainer/VBoxContainer/Def_Dmg"]
margin_left = 12.0
margin_right = 29.0
margin_bottom = 18.0
rect_min_size = Vector2( 17, 17 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="Node2D/MarginContainer/VBoxContainer/Def_Dmg"]
margin_left = 33.0
margin_right = 51.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
text = "12"
valign = 1
[connection signal="pressed" from="." to="." method="_on_Field_pressed"]
